tests/neg/semantic_undefined_func.baa
// EXPECT: استدعاء دالة غير معرّفة
// EXPECT: عرّف الدالة قبل ندائها
صحيح الرئيسية() {
    صحيح س = غير_معروف(١).
    إرجع س.
}
